--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Job Buddy</title>
+    <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,7 +41,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-
     <script
       src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
       crossorigin></script>
