--- a/client/public/index.html
+++ b/client/public/index.html
@@ -43,6 +43,6 @@
     <script
       src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
       crossorigin></script>
-      <script src="https://apis.google.com/js/api.js"></script>
+      <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
   </body>
 </html>
